--- a/INTITA/Modules/ProfileSettingsScreen/MultipleSelectionScreen/Cells/ItemTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettingsScreen/MultipleSelectionScreen/Cells/ItemTableViewCell.xib
@@ -1,21 +1,60 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ItemTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="101" id="KGk-i7-Jjw" customClass="ItemTableViewCell" customModule="INTITA" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="101"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="101"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r1K-Ti-hZS">
+                        <rect key="frame" x="28" y="12" width="264" height="77"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="value label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U87-UL-B1o">
+                                <rect key="frame" x="8" y="8" width="248" height="61"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemGray5Color"/>
+                        <constraints>
+                            <constraint firstItem="U87-UL-B1o" firstAttribute="leading" secondItem="r1K-Ti-hZS" secondAttribute="leading" constant="8" id="EBf-Jh-Y4a"/>
+                            <constraint firstAttribute="trailing" secondItem="U87-UL-B1o" secondAttribute="trailing" constant="8" id="EvJ-EL-LLg"/>
+                            <constraint firstItem="U87-UL-B1o" firstAttribute="top" secondItem="r1K-Ti-hZS" secondAttribute="top" constant="8" id="o60-rU-6AG"/>
+                            <constraint firstAttribute="bottom" secondItem="U87-UL-B1o" secondAttribute="bottom" constant="8" id="rfT-UW-3ZB"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="r1K-Ti-hZS" secondAttribute="trailing" constant="28" id="2iZ-lI-qWa"/>
+                    <constraint firstItem="r1K-Ti-hZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="FUZ-PC-rKu"/>
+                    <constraint firstItem="r1K-Ti-hZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Kd2-hu-pT3"/>
+                    <constraint firstAttribute="bottom" secondItem="r1K-Ti-hZS" secondAttribute="bottom" constant="12" id="Ypt-wg-xck"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="colorView" destination="r1K-Ti-hZS" id="pzo-VY-Gfq"/>
+                <outlet property="valueLabel" destination="U87-UL-B1o" id="wTa-Qh-0Vr"/>
+            </connections>
+            <point key="canvasLocation" x="-4.3478260869565224" y="65.959821428571431"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
