--- a/INTITA/Modules/ProfileSettingsScreen/Cells/ButtonTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettingsScreen/Cells/ButtonTableViewCell.xib
@@ -55,6 +55,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="rightButton" destination="mDD-R0-BCk" id="pqq-Ic-cwk"/>
                 <outlet property="titleLabel" destination="n2h-Hk-22e" id="yRR-Ne-9Ww"/>
                 <outlet property="valueLabel" destination="jxv-Ct-aHx" id="sHP-FS-jcw"/>
             </connections>
